testData/fixtures/semanticalAnalysis/missing-hash-element-arrow.php
<?php

    $array = [
        '...' => '',
        '...'<error descr="[EA] It's probably was intended to use ' => ' here (tweak formatting if not).">,</error> '...'
    ];

    $array = [
        0 => '',
        '...', '...'
    ];
    $array = [
        '...' => '',
        '...',
        '...'
    ];